tests/ui/abi/riscv-discoverability-guidance.riscv32.stderr
error[E0703]: invalid ABI: found `riscv-interrupt`
  --> $DIR/riscv-discoverability-guidance.rs:15:8
   |
LL | extern "riscv-interrupt" fn isr() {}
   |        ^^^^^^^^^^^^^^^^^ invalid ABI
   |
   = note: invoke `rustc --print=calling-conventions` for a full list of supported calling conventions
help: there's a similarly named valid ABI `riscv-interrupt-m`
   |
LL | extern "riscv-interrupt-m" fn isr() {}
   |                        ++

error[E0703]: invalid ABI: found `riscv-interrupt-u`
  --> $DIR/riscv-discoverability-guidance.rs:20:8
   |
LL | extern "riscv-interrupt-u" fn isr_U() {}
   |        ^^^^^^^^^^^^^^^^^^^ invalid ABI
   |
   = note: invoke `rustc --print=calling-conventions` for a full list of supported calling conventions
help: there's a similarly named valid ABI `riscv-interrupt-m`
   |
LL - extern "riscv-interrupt-u" fn isr_U() {}
LL + extern "riscv-interrupt-m" fn isr_U() {}
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0703`.
